fix test bugs 1.AbstractServiceTest.java  - preload <...>TestData classes. 2.DataJpaMealServiceTest.java  - add Assert.assertEquals() in method getMealUser. 3.InMemoryMealRepository.java - delete method getMealAndUser. 4.logback-test.xml  - change logger level to info/ 5.spring-db.xml  - delete common bean dataSource. 6.SpringMain.java - change load path from inmemory to spring-db/ spring-app 7.UserTestData.java - delete method userWithMeals. - for vars user/admin add check for null