@@ -1,10 +1,12 @@
 package ru.javawebinar.topjava;
 
+import org.springframework.util.CollectionUtils;
 import ru.javawebinar.topjava.model.Role;
 import ru.javawebinar.topjava.model.User;
 
 import java.util.Collections;
 import java.util.Date;
+import java.util.Set;
 
 import static ru.javawebinar.topjava.model.AbstractBaseEntity.START_SEQ;
 
@@ -16,16 +18,9 @@ public class UserTestData {
     public static final int GUEST_ID = START_SEQ + 2;
     public static final int NOT_FOUND = 10;
 
-    public static final User user = new User(USER_ID, "User", "user@yandex.ru", "password", Collections.emptySet(), Role.USER);
-    public static final User admin = new User(ADMIN_ID, "Admin", "admin@gmail.com", "admin", Collections.emptySet(), Role.ADMIN);
+    public static final User user = new User(USER_ID, "User", "user@yandex.ru", "password", Set.copyOf(CollectionUtils.isEmpty(MealTestData.meals) ? Collections.EMPTY_LIST : MealTestData.meals), Role.USER);
+    public static final User admin = new User(ADMIN_ID, "Admin", "admin@gmail.com", "admin", Set.of(MealTestData.adminMeal1, MealTestData.adminMeal2), Role.ADMIN);
     public static final User guest = new User(GUEST_ID, "Guest", "guest@gmail.com", "guest", Collections.emptySet());
-
-    public static final User userWithMeals = new User(
-            USER_ID,
-            "User", "user@yandex.ru",
-            "password",
-            Collections.emptySet(), Role.USER
-    );
 
     public static User getNew() {
         return new User(null, "New", "new@gmail.com", "newPass", 1555, false, new Date(), Collections.emptySet(), Collections.singleton(Role.USER));
